style(index.css): add overscroll-behavior to prevent scrolling overflow

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  overscroll-behavior: none;
+}
 body {
   min-height: 100vh;
 }
